# Support-Vector-Machines

./: CMakeLists.txt  README.md  configure
src/: CMakeCache.txt  Makefile  README.md  cmake_install.cmake  install.sh  svm_predict.cpp  svm_train.cpp
